fix text align

--- a/website/src/components/Footer/Footer.module.css
+++ b/website/src/components/Footer/Footer.module.css
@@ -10,6 +10,7 @@
 .footerContainer > div:first-child {
     font-size: 25px;
     font-weight: bold;
+    text-align: center;
 }
 
 .imagesContainer {
