--- a/website/src/views/MainView/MainView.module.css
+++ b/website/src/views/MainView/MainView.module.css
@@ -41,6 +41,10 @@
     justify-self: center;
 }
 
+.helpBox>div:first-child {
+    text-align: center;
+}
+
 @media only screen and (max-width: 780px) {
     .generalInfoContainer {
         height: 90dvh;
@@ -69,5 +73,9 @@
 
     .helpBox {
         width: 90vw;
+    }
+
+    .representationInfo>div:last-child {
+        color: rgb(0, 0, 0);
     }
 }
